--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -8,7 +8,7 @@
     android:paddingLeft="@dimen/activity_horizontal_margin"
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
-    tools:context="com.example.calenderevent.LoginActivity">
+    tools:context="com.example.calenderevent.gcm.LoginActivity">
 
     <!-- Login progress -->
     <ProgressBar
@@ -22,12 +22,16 @@
     <ScrollView
         android:id="@+id/login_form"
         android:layout_width="match_parent"
+        android:gravity="center"
+        android:layout_gravity="center"
         android:layout_height="match_parent">
 
         <LinearLayout
             android:id="@+id/email_login_form"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:gravity="center"
+            android:layout_gravity="center"
             android:orientation="vertical">
 
             <android.support.design.widget.TextInputLayout
@@ -39,6 +43,8 @@
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:hint="@string/prompt_email"
+                    android:gravity="center"
+                    android:layout_gravity="center"
                     android:inputType="textEmailAddress"
                     android:maxLines="1"
                     android:singleLine="true" />
@@ -56,6 +62,8 @@
                     android:hint="@string/prompt_password"
                     android:imeActionId="6"
                     android:imeActionLabel="@string/action_sign_in_short"
+                    android:gravity="center"
+                    android:layout_gravity="center"
                     android:imeOptions="actionUnspecified"
                     android:inputType="textPassword"
                     android:maxLines="1"
@@ -70,6 +78,18 @@
                 android:layout_height="wrap_content"
                 android:layout_marginTop="16dp"
                 android:text="@string/action_sign_in"
+                android:textStyle="bold" />
+
+            <Button
+                android:id="@+id/email_register_in_button"
+                style="?android:textAppearanceSmall"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:background="@null"
+                android:layout_gravity="center"
+                android:paddingLeft="10dp"
+                android:gravity="left|center"
+                android:text="@string/action_register"
                 android:textStyle="bold" />
 
         </LinearLayout>
